--- a/index.html
+++ b/index.html
@@ -11,208 +11,226 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- Шапка -->
-    <header class="header">
-      <nav>
-        <a class="header-logo" href="./index.html"
-          ><span class="logo-style">Web</span>studio</a
-        >
-
-        <ul class="header-site-nav list">
-          <li class="header-site-nav">
-            <a class="header-link link current" href="./index.html">Студія</a>
-          </li>
-          <li class="header-site-nav">
-            <a class="header-link link" href="./portfolio.html">Портфоліо</a>
-          </li>
-          <li class="header-site-nav">
-            <a class="header-link link" href="">Контакти</a>
-          </li>
-        </ul>
-      </nav>
-
-      <ul class="header-auth-nav list">
-        <li class="header-auth-nav">
-          <a class="header-link link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
+    <header class="page-header">
+      <div class="container">
+        <nav class="header-nav">
+          <a class="header-logo" href="./index.html"
+            ><span class="logo-style">Web</span>studio</a
           >
-        </li>
-        <li class="header-auth-nav">
-          <a class="header-link link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-      </ul>
+
+          <ul class="header-list list">
+            <li class="item">
+              <a class="header-link link current" href="./index.html">Студія</a>
+            </li>
+            <li class="item">
+              <a class="header-link link" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li class="item">
+              <a class="header-link link" href="">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header-contacts">
+          <ul class="header-tel header-list list">
+            <li class="item">
+              <a class="header-link link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+            <li class="item">
+              <a class="header-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
 
     <main>
       <!-- Hero -->
 
       <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <div class="hero-description">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
 
-        <button class="hero-button" type="button">Замовити послугу</button>
+          <button class="hero-button" type="button">Замовити послугу</button>
+        </div>
       </section>
 
       <!-- Наша ефективність -->
-      <section class="section">
-        <h2 class="visually-hidden">Наша ефективність</h2>
-        <ul class="list">
-          <li>
-            <h3 class="section-title">Увага до деталей</h3>
-            <p class="section=text">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title">Пунктуальність</h3>
-            <p class="section=text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title">Планування</h3>
-            <p class="section=text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title">Сучасні технології</h3>
-            <p class="section=text">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
+      <section class="about section">
+        <div class="container">
+          <div class="about-description"></div>
+          <h2 class="visually-hidden">Наша ефективність</h2>
+          <ul class="about-list list">
+            <li class="item">
+              <h3 class="about-title">Увага до деталей</h3>
+              <p class="about=text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="about-title">Пунктуальність</h3>
+              <p class="about=text">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="about-title">Планування</h3>
+              <p class="about=text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="about-title">Сучасні технології</h3>
+              <p class="about=text">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        
       </section>
 
       <!-- Чим ми займаємося -->
-      <section class="work">
-        <h2 class="title-work-team">Чим ми займаємося</h2>
-        <ul class="list">
-          <li>
-            <img
-              class="work-img"
-              src="./images/desktop-programs.jpg"
-              alt="Декстопні програми"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              class="work-img"
-              src="./images/mobile-applications.jpg"
-              alt="Мобільні додатки"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              class="work-img"
-              src="./images/design-solution.jpg"
-              alt="Дизайнерське рішення"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+      <section class="work section">
+        <div class="container">
+          <h2 class="title-work-team">Чим ми займаємося</h2>
+          <ul class="work-list list">
+            <li class="item">
+              <img
+                class="work-img img"
+                src="./images/desktop-programs.jpg"
+                alt="Декстопні програми"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="item">
+              <img
+                class="work-img img"
+                src="./images/mobile-applications.jpg"
+                alt="Мобільні додатки"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="item">
+              <img
+                class="work-img img"
+                src="./images/design-solution.jpg"
+                alt="Дизайнерське рішення"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Наша команда -->
 
       <section class="team">
-        <h2 class="title-work-team">Наша команда</h2>
-        <ul class="list">
-          <li class="list-item">
-            <a href=""
-              ><img
-                class="team-img"
-                src="./images/igor.jpg"
-                alt="чоловік в окулярах, рубашці"
-                width="270"
-                height="260"
-            /></a>
-            <h3 class="team-title-third">Ігор Дем'яненко</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li class="list-item">
-            <a href=""
-              ><img
-                class="team-img"
-                src="./images/olha.jpg"
-                alt="жінка блондинка в окулярах, піджаку"
-                width="270"
-                height="260"
-            /></a>
-            <h3 class="team-title-third">Ольга Рєпіна</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li class="list-item">
-            <a href=""
-              ><img
-                class="team-img"
-                src="./images/mikola.jpg"
-                alt="чоловік брюнет в білій сорочці"
-                width="270"
-                height="260"
-            /></a>
-            <h3 class="team-title-third">Микола Тарасов</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li class="list-item">
-            <a href=""
-              ><img
-                class="team-img"
-                src="./images/mihail.jpg"
-                alt="чоловік в окулярах, чорній футболці"
-                width="270"
-                height="260"
-            /></a>
-            <h3 class="team-title-third">Михайло Єрмаков</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title-work-team">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="item">
+              <a href=""
+                ><img
+                  class="team-img img"
+                  src="./images/igor.jpg"
+                  alt="чоловік в окулярах, рубашці"
+                  width="270"
+                  height="260"
+              /></a>
+              <h3 class="team-title">Ігор Дем'яненко</h3>
+              <p class="team-position">Product Designer</p>
+            </li>
+            <li class="item">
+              <a href=""
+                ><img
+                  class="team-img img"
+                  src="./images/olha.jpg"
+                  alt="жінка блондинка в окулярах, піджаку"
+                  width="270"
+                  height="260"
+              /></a>
+              <h3 class="team-title">Ольга Рєпіна</h3>
+              <p class="team-position">Frontend Developer</p>
+            </li>
+            <li class="item">
+              <a href=""
+                ><img
+                  class="team-img img"
+                  src="./images/mikola.jpg"
+                  alt="чоловік брюнет в білій сорочці"
+                  width="270"
+                  height="260"
+              /></a>
+              <h3 class="team-title">Микола Тарасов</h3>
+              <p class="team-position">Marketing</p>
+            </li>
+            <li class="item">
+              <a href=""
+                ><img
+                  class="team-img img"
+                  src="./images/mihail.jpg"
+                  alt="чоловік в окулярах, чорній футболці"
+                  width="270"
+                  height="260"
+              /></a>
+              <h3 class="team-title">Михайло Єрмаков</h3>
+              <p class="team-position">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Підвал -->
 
     <footer class="footer">
-      <a class="header-logo" href="./index.html"
-        ><span class="logo-style">Web</span
-        ><span class="footer-logo-style">studio</span></a
-      >
+      <div class="container">
+        <a class="header-logo footer-logo" href="./index.html"
+          ><span class="logo-style">Web</span
+          ><span class="footer-logo-style">studio</span></a
+        >
 
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              class="address link"
-              href="https://goo.gl/maps/4uQXYABWk6G59Mzo6"
-              target="_blank"
-              rel="noopener noreferrer nowfollow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a class="mail-tel link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="mail-tel link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address>
+          <ul class="footer-list list">
+            <li class="item">
+              <a
+                class="address link"
+                href="https://goo.gl/maps/4uQXYABWk6G59Mzo6"
+                target="_blank"
+                rel="noopener noreferrer nowfollow"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li class="item">
+              <a class="mail-tel link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="item">
+              <a class="mail-tel link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
