--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </p>
             </li>
           </ul>
-        
+        </div>
       </section>
 
       <!-- Чим ми займаємося -->
