--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container">
         <nav class="header-nav">
           <a class="header-logo" href="./index.html"
-            ><span class="logo-style">Web</span>studio</a
+            >Web<span class="logo-style">Studio</span></a
           >
 
           <ul class="header-list list">
@@ -59,7 +59,7 @@
       <!-- Hero -->
 
       <section class="hero">
-        <div class="hero-description">
+        <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
 
           <button class="hero-button" type="button">Замовити послугу</button>
@@ -69,7 +69,7 @@
       <!-- Наша ефективність -->
       <section class="about section">
         <div class="container">
-          <div class="about-description"></div>
+          <!-- <div class="about-description"></div> -->
           <h2 class="visually-hidden">Наша ефективність</h2>
           <ul class="about-list list">
             <li class="item">
@@ -146,52 +146,56 @@
           <h2 class="title-work-team">Наша команда</h2>
           <ul class="team-list list">
             <li class="item">
-              <a href=""
-                ><img
-                  class="team-img img"
-                  src="./images/igor.jpg"
-                  alt="чоловік в окулярах, рубашці"
-                  width="270"
-                  height="260"
-              /></a>
-              <h3 class="team-title">Ігор Дем'яненко</h3>
-              <p class="team-position">Product Designer</p>
+              <img
+                class="team-img img"
+                src="./images/igor.jpg"
+                alt="чоловік в окулярах, рубашці"
+                width="270"
+                height="260"
+              />
+              <div class="team-container">
+                <h3 class="team-title">Ігор Дем'яненко</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
             </li>
             <li class="item">
-              <a href=""
-                ><img
-                  class="team-img img"
-                  src="./images/olha.jpg"
-                  alt="жінка блондинка в окулярах, піджаку"
-                  width="270"
-                  height="260"
-              /></a>
-              <h3 class="team-title">Ольга Рєпіна</h3>
-              <p class="team-position">Frontend Developer</p>
+              <img
+                class="team-img img"
+                src="./images/olha.jpg"
+                alt="жінка блондинка в окулярах, піджаку"
+                width="270"
+                height="260"
+              />
+              <div class="team-container">
+                <h3 class="team-title">Ольга Рєпіна</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
             </li>
             <li class="item">
-              <a href=""
-                ><img
-                  class="team-img img"
-                  src="./images/mikola.jpg"
-                  alt="чоловік брюнет в білій сорочці"
-                  width="270"
-                  height="260"
-              /></a>
-              <h3 class="team-title">Микола Тарасов</h3>
-              <p class="team-position">Marketing</p>
+              <img
+                class="team-img img"
+                src="./images/mikola.jpg"
+                alt="чоловік брюнет в білій сорочці"
+                width="270"
+                height="260"
+              />
+              <div class="team-container">
+                <h3 class="team-title">Микола Тарасов</h3>
+                <p class="team-position">Marketing</p>
+              </div>
             </li>
             <li class="item">
-              <a href=""
-                ><img
-                  class="team-img img"
-                  src="./images/mihail.jpg"
-                  alt="чоловік в окулярах, чорній футболці"
-                  width="270"
-                  height="260"
-              /></a>
-              <h3 class="team-title">Михайло Єрмаков</h3>
-              <p class="team-position">UI Designer</p>
+              <img
+                class="team-img img"
+                src="./images/mihail.jpg"
+                alt="чоловік в окулярах, чорній футболці"
+                width="270"
+                height="260"
+              />
+              <div class="team-container">
+                <h3 class="team-title">Михайло Єрмаков</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -203,8 +207,7 @@
     <footer class="footer">
       <div class="container">
         <a class="header-logo footer-logo" href="./index.html"
-          ><span class="logo-style">Web</span
-          ><span class="footer-logo-style">studio</span></a
+          >Web<span class="footer-color">Studio</span></a
         >
 
         <address>
