--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
       <div class="container">
         <nav class="header-nav">
           <a class="header-logo" href="./index.html"
-            ><span class="logo-style">Web</span>studio</a
+            >Web<span class="logo-style">Studio</span></a
           >
 
           <ul class="header-list list">
@@ -60,28 +60,27 @@
     <main>
       <section class="project">
         <div class="container">
-          <h2 class="visually-hidden">Проекти</h2>
+          <h1 class="visually-hidden">Проекти</h1>
 
           <!-- кнопка -->
-          <nav>
-            <ul class="button-list list">
-              <li class="item">
-                <button class="button button-current" type="button">Усі</button>
-              </li>
-              <li class="item">
-                <button class="button" type="button">Веб-сайти</button>
-              </li>
-              <li class="item">
-                <button class="button" type="button">Додатки</button>
-              </li>
-              <li class="item">
-                <button class="button" type="button">Дизайн</button>
-              </li>
-              <li class="item">
-                <button class="button" type="button">Маркетинг</button>
-              </li>
-            </ul>
-          </nav>
+
+          <ul class="button-list list">
+            <li class="item">
+              <button class="button button-current" type="button">Усі</button>
+            </li>
+            <li class="item">
+              <button class="button" type="button">Веб-сайти</button>
+            </li>
+            <li class="item">
+              <button class="button" type="button">Додатки</button>
+            </li>
+            <li class="item">
+              <button class="button" type="button">Дизайн</button>
+            </li>
+            <li class="item">
+              <button class="button" type="button">Маркетинг</button>
+            </li>
+          </ul>
 
           <!-- Проекти -->
           <ul class="project-list list">
@@ -93,6 +92,7 @@
                 width="370"
                 height="294"
               />
+              <div class="project-container"></div>
               <h2 class="project-title">Технокряк</h2>
               <p class="project-text">Веб-сайт</p>
             </li>
@@ -104,8 +104,10 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-              <p class="project-text">Дизайн</p>
+              <div class="project-container">
+                <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+                <p class="project-text">Дизайн</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -115,8 +117,10 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Ресторан Seafood</h2>
-              <p class="project-text">Додаток</p>
+              <div class="project-container">
+                <h2 class="project-title">Ресторан Seafood</h2>
+                <p class="project-text">Додаток</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -126,8 +130,10 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Проєкт Prime</h2>
-              <p class="project-text">Маркетинг</p>
+              <div class="project-container">
+                <h2 class="project-title">Проєкт Prime</h2>
+                <p class="project-text">Маркетинг</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -137,8 +143,10 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Проєкт Boxes</h2>
-              <p class="project-text">Додаток</p>
+              <div class="project-container">
+                <h2 class="project-title">Проєкт Boxes</h2>
+                <p class="project-text">Додаток</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -148,8 +156,10 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Inspiration has no Borders</h2>
-              <p class="project-text">Веб-сайт</p>
+              <div class="project-container">
+                <h2 class="project-title">Inspiration has no Borders</h2>
+                <p class="project-text">Веб-сайт</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -161,8 +171,10 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Видання Limited Edition</h2>
-              <p class="project-text">Дизайн</p>
+              <div class="project-container">
+                <h2 class="project-title">Видання Limited Edition</h2>
+                <p class="project-text">Дизайн</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -172,8 +184,10 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Проєкт LAB</h2>
-              <p class="project-text">Маркетинг</p>
+              <div class="project-container">
+                <h2 class="project-title">Проєкт LAB</h2>
+                <p class="project-text">Маркетинг</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -183,8 +197,10 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Growing Business</h2>
-              <p class="project-text">Додаток</p>
+              <div class="project-container">
+                <h2 class="project-title">Growing Business</h2>
+                <p class="project-text">Додаток</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -196,8 +212,7 @@
     <footer class="footer">
       <div class="container">
         <a class="header-logo footer-logo" href="./index.html"
-          ><span class="logo-style">Web</span
-          ><span class="footer-logo-style">studio</span></a
+          >Web<span class="footer-color">Studio</span></a
         >
 
         <address>
