--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
     </header>
 
     <main>
-      <section class="project">
+      <section class="project section">
         <div class="container">
           <h1 class="visually-hidden">Проекти</h1>
 
@@ -92,9 +92,10 @@
                 width="370"
                 height="294"
               />
-              <div class="project-container"></div>
-              <h2 class="project-title">Технокряк</h2>
-              <p class="project-text">Веб-сайт</p>
+              <div class="project-container">
+                <h2 class="project-title">Технокряк</h2>
+                <p class="project-text">Веб-сайт</p>
+              </div>
             </li>
             <li class="item">
               <img
