--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
       <!-- Наша команда -->
 
-      <section class="team">
+      <section class="team section">
         <div class="container">
           <h2 class="title-work-team">Наша команда</h2>
           <ul class="team-list list">
