--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <div class="header-contacts">
           <ul class="header-tel header-list list">
             <li class="item">
-              <a class="header-link link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
+              <a class="header-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
               >
             </li>
             <li class="item">
-              <a class="header-link link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+              <a class="header-link link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
               >
             </li>
           </ul>
@@ -74,27 +74,27 @@
           <ul class="about-list list">
             <li class="item">
               <h3 class="about-title">Увага до деталей</h3>
-              <p class="about=text">
+              <p class="about-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
             <li class="item">
               <h3 class="about-title">Пунктуальність</h3>
-              <p class="about=text">
+              <p class="about-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
             <li class="item">
               <h3 class="about-title">Планування</h3>
-              <p class="about=text">
+              <p class="about-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="item">
               <h3 class="about-title">Сучасні технології</h3>
-              <p class="about=text">
+              <p class="about-text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
